# immaterial-wiiu-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sync_example.rocket  train_journey.rocket
assets/: box.fbx  building.fbx  cardboard_cloud.fbx  carpet.fbx  cloud.fbx  crossing_signs.fbx  cushion.fbx  duvet_hills.fbx  eepytime.fbx  egg.fbx  egg_carton.fbx  gizmos.fbx  house1.fbx  house2.fbx  lampshade.fbx  pillow.fbx  sofa.fbx  station_building.fbx  tablecloth.fbx  toast_rack_with_toast.fbx  train.fbx  type.fbx  viaduct.fbx
assets_source/: building.fbx  cardboard_cloud.fbx  egg.fbx  house2.fbx  station_building.fbx
graphics/: LoadUFBX.cpp  LoadUFBX.h  Material.cpp  Material.h  MaterialCollection.cpp  MaterialCollection.h  Model.cpp  NastyObjLoader.h  ObjectFactory.cpp  ObjectFactory.h  SceneMaterial.h  SceneObject.cpp  SceneObject.h
immaterial/: Assets.cpp  Assets.h  EepyScene.cpp  RealScene.cpp  Scenes.cpp  Scenes.h  Spline.h
math/: projection.cpp  projection.h
renderer/: CRC32.h  CafeGLSLCompiler.h  PostProcessing.cpp  RenderBuffer.cpp  RenderBuffer.h  RenderMaterial.cpp  RenderMaterial.h  RenderObject.cpp  RenderObject.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h
scene/: Material.cpp  Object.cpp  Object.h  SceneBase.h  TestScene.h
scenes/: DevroomScene.h  EepyScene.cpp  GizmosScene.h  RealScene.cpp  RealScene.h  SceneAssets.cpp  SceneAssets.h  SceneBase.h  Scenes.cpp  Spline.cpp  TestScene.h
shaders/: billboard.frag  billboard.vert  blur.frag  bones.frag  bones.vert  compose.frag  projected.frag  projected.vert  shader.frag  shader.vert  shaders.h  shaders.py  skybox.frag  skybox.vert  textured.frag
sound/: Music.cpp  Music.h
sync/: Sync.cpp  Sync.h
sync_tracks/: _Camera-3AAperture.track  _Camera-3AFoV.track  _Camera-3AFocalDist.track  _Camera-3AFocalLen.track  _Camera-3ALookatX.track  _Camera-3APos-3AX.track  _Camera-3APos-3AY.track  _Camera-3APos-3AZ.track  _Camera-3APosX.track  _Camera-3APosY.track  _Camera-3APosZ.track  _Camera-3AUpZ.track  _Eepy-3ADuvet.track  _Eggton-3ABus.track  _Eggton-3ARunnyEggs.track  _Eggton-3ASausage.track  _Eggton-3AToast.track  _GizmosPart-3AGizmos-3AFrame.track  _GizmosPart-3AGizmos-3ARotY.track  _GizmosPart-3AGizmos-3AScale.track  _Global-3AFade.track  _Global-3AFresnelPow.track  _Global-3AScene.track  _Global-3AVignette.track  _Scene-3ACamID.track  _Scene-3ACamParam.track  _Scene-3ALookSausage.track  _TestPart-3AObject-3AFrame.track  _TestPart-3AObject-3ARotY.track  _TestPart-3AObject2-3ARotY.track  _TestPart-3AObject2-3AShiftX.track  _Train-3ABounce.track  _Train-3ACar1.track
util/: memory.cpp  memory.h  ourmalloc.cpp  ourmalloc.h  wuhbsupport.h
